fix results style

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -823,6 +823,8 @@
          "2":"40p. extract",
          "1":"Not Available",
          "hit":{
+            "5":"open access / BDRC",
+            "4":"open access / IIIF",
             "3":"archive.org",
             "2":"40p. extract",
             "1":"not available"
