first draft for new UI in etext search (#909)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -724,7 +724,8 @@
       "findT":"Find Texts Related to this {{type}}",
       "findTbyP":"Find texts created by this person",
       "findTaboutT":"Find texts about this topic",
-      "searchT":"Search this {{type}}"
+      "searchT":"Search this {{type}}",
+      "goB":"Back"
    },
    "tradition":{
       "boT":"Tibetan Tradition",
