PoC for new outline behavior/scope selection (#909)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -90,7 +90,12 @@
       "scan": "Scan",
       "scan_plural": "Scans",
       "serial": "Series",
-      "match": "match"
+      "match": "match",
+      "ET":{
+         "Etext":"Text",
+         "EtextInstance":"Collection",
+         "EtextVolume":"Volume"
+      }
    },
    "topbar": {
       "about": "about us",
