remove horizontal animation (#909) + fix place type when multiple (#922)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -6,7 +6,8 @@
       "lpar": "(",
       "rpar": ")",
       "semic": "; ",
-      "nth": "{{num}}."
+      "nth": "{{num}}.",
+      "comma": ", "
    },
    "cookies":{
       "message":"This website uses a third party cookie to collect anonymous usage statistics and enhance the user experience (Google Analytics).",
