--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -738,7 +738,8 @@
       "pagesN":"{{i}} / {{count}} page",
       "pagesN_plural":"{{i}} / {{count}} pages",
       "noR":"No results",
-      "pageRvol":"Page {{p}} from Volume {{v}}"
+      "pageRvol":"Page {{p}} from Volume {{v}}",
+      "explain":"Showing the most popular items. Make a new search or use the filters on the left to find what you are looking for."
    },
    "tradition":{
       "boT":"Tibetan Tradition",
