WIP: add new Recent search results (#932)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -743,6 +743,7 @@
       "noR":"No results",
       "pageRvol":"Page {{p}} from Volume {{v}}",
       "explain":"Showing the most popular items. Make a new search or use the filters on the left to find what you are looking for.",
+      "explainR":"Showing the most recent items. Use the filters on the left to find what you are looking for.",
       "searchTn":{
          "topic": "Search texts about this topic",
          "person": "Search texts by this person or about this person",
