simplify search results (#948)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -333,8 +333,8 @@
       "resource": "resource",
       "in": "in",
       "available": "Resource available at",
-      "inRootInstance": "In",
-      "workBy": "By",
+      "inRootInstance": "In Collection",
+      "workBy": "Author",
       "eTextIsForWork": "For Work",
       "year": "Year",
       "inInstance": "In $t(types.instance)",
