--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -295,8 +295,8 @@
       "tmp:otherInstance":"Other version of this work",
       "tmp:otherInstance_plural":"Other versions of this work",
       "tmp:containingOutline": "Containing outline",
-      "tmp:scans_access":"Scans Access",
-      "tmp:etext_access":"Etext Access",
+      "tmp:scans_access":"Scans",
+      "tmp:etext_access":"Etext",
       "tmp:scans_quality":"Scans Quality",
       "tmp:etext_quality":"Etext Quality",
       "tmp:placeType":"Place Type",
