add index number in outlines nodes title (#958)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -762,7 +762,8 @@
          "product": "Search texts in this collection"
       },
       "inCollection":"In collection",
-      "inCollection_plural":"In collections"
+      "inCollection_plural":"In collections",
+      "outLn":"{{n}} "
    },
    "tradition":{
       "boT":"Tibetan Tradition",
