add right bracket (#958)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -692,7 +692,7 @@
       "openW":"བརྩམ་ཆོས་ཁ་ཕྱེ།",
       "fullR":"ཟིན་བྲིས་ཆ་ཚང་།",
       "notInList":"PDF འདི་ཁྱེད་ཀྱི་སློབ་གླིང་གིས་སྔོན་མངགས་བྱས་པའི་དཔེ་ཚོགས་ཤིག་གི་ཆ་ཤས་མིན། <nl/> <lk> BDRC དྲ་སྟེགས་སུ་ཕེབས་ཏེ་</lk> ཆོག་མཆན་ཐོབ་ཕྱིར་ནང་འཛུལ་བྱོས།",
-      "outLn":"{{n,counttobo}} "
+      "outLn":"{{n,counttobo}}）"
    },
    "mirador": {
       "return": "བུདྡྷ་ལ་ཕྱིར་ལོག",
