--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -763,7 +763,7 @@
       },
       "inCollection":"In collection",
       "inCollection_plural":"In collections",
-      "outLn":"{{n}} "
+      "outLn":"{{n}}) "
    },
    "tradition":{
       "boT":"Tibetan Tradition",
