--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -309,7 +309,8 @@
       "tmp:associatedTradition":"Tradition",
       "tmp:notAvailable":"Not available",
       "tmp:hasInstance":"Version of this work",
-      "tmp:hasInstance_plural":"Versions of this work"
+      "tmp:hasInstance_plural":"Versions of this work",
+      "tmp:noPagination": "No image indication. You might have to find the right page by yourself."
    },
    "guided":{
       "keyword":"keyword",
