new results style (#967)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -373,7 +373,9 @@
       "hitKW":"{{count}} hit for \"{{kw}}\"",
       "hitKW_plural":"{{count}} hits for \"{{kw}}\"",
       "added":"Added {{date}}",
-      "inRootInstanceS": "in"
+      "inRootInstanceS": "in",
+      "nHitET":"Hit in etext",
+      "nHitET_plural":"Hits in etext"
    },
    "map": {
       "touch": "Use two fingers to move the map",
