--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -58,7 +58,9 @@
       "female-authors":"Female authors",
       "works-by-female-authors":"Works by female authors",
       "instances-by-female-authors":"Versions by female authors",
-      "collec":"<h>BDRC offers a digital acquisition program for research libraries, the Core Text Collection (CTC), now with an updated interface for convenient searching and browsing.</h><h><bold>Each of the 18 CTC hard drives contains curated volumes from BDRC’s holdings curated by our librarians and drawn from our most recent acquisitions.</bold></h><h>Please ask your institution’s librarian about subscribing.<nl/>For more information and assistance, email <lk href='mailto:dechen@bdrc.io'>dechen@bdrc.io</lk>.</h>"
+      "collec":"<h>BDRC offers a digital acquisition program for research libraries, the Core Text Collection (CTC), now with an updated interface for convenient searching and browsing.</h><h><bold>Each of the 18 CTC hard drives contains curated volumes from BDRC’s holdings curated by our librarians and drawn from our most recent acquisitions.</bold></h><h>Please ask your institution’s librarian about subscribing.<nl/>For more information and assistance, email <lk href='mailto:dechen@bdrc.io'>dechen@bdrc.io</lk>.</h>",
+      "buda":"The Buddhist Digital Archives",
+      "subtitle_new":"Access almost any text from the major Buddhist traditions. BUDA contains 30 million pages scanned from the precious originals, and 5 million pages of etexts."
    },
    "types": {
       "any": "Any",
@@ -127,7 +129,11 @@
       "resultsNoKW": "Search results",
       "preserving":"Preserving Buddhist literature for the world",
       "advanced":"Advanced search",
-      "simple":"Simple search"
+      "simple":"Simple search",
+      "BDRC":"BDRC",
+      "aboutB":"About BUDA",
+      "news":"News",
+      "programs":"Programs"
    },
    "Lsidebar": {
       "sortBy": {
