--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -168,7 +168,8 @@
          }
       },
       "donate2":"Donate to BDRC",
-      "support":"We need your support"
+      "support":"We need your support",
+      "placeHda":"Search the Digital Archives"
    },
    "Lsidebar": {
       "sortBy": {
