--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -102,7 +102,8 @@
       },
       "parttypetext":"text",
       "collection":"Collection",
-      "collection_plural":"Collections"
+      "collection_plural":"Collections",
+      "tradition":"Tradition"
    },
    "topbar": {
       "about": "about us",
@@ -164,7 +165,7 @@
          },
          "scope": {
             "title":"Scopes of search",
-            "body":"When the search box is on a yellow background and says “Search BDRC’s Library”, it covers everything we have.  In many other cases, the search element is just a line on white background, and the limited scopes are mentioned, for example “Search texts by this person or about this person”."
+            "body":"When the search box is on a yellow background and says “Search the Digital Archives”, it covers everything we have.  In many other cases, the search element is just a line on white background, and the limited scopes are mentioned, for example “Search texts by this person or about this person”."
          }
       },
       "donate2":"Donate to BDRC",
@@ -822,13 +823,20 @@
       "helpWorkId":"A <italic>Work</italic> in the BDRC context represents the conceptual essence of the cataloged resource: authors, languages, and what it is about (subjects). It connects together all the versions. See the user guide for more.",
       "workId1":"See the \"work\" page which combines all the different versions of this text.",
       "workId2":"The ID of this version is {{ id }}.",
-      "workId3":"The overarching work ID is {{ id }}"
+      "workId3":"The overarching work ID is {{ id }}",
+      "searchTtrad":"Search the {{trad}}"
    },
    "tradition":{
       "boT":"Tibetan Tradition",
       "piT":"Pali / SEA Tradition",
       "saT":"Sanskrit Tradition",
       "zhT":"Chinese Tradition",
+      "title":{
+         "boT":"Tibetan Tradition",
+         "piT":"Pali and South East Asian Tradition",
+         "saT":"Sanskrit Tradition",
+         "zhT":"Chinese Tradition"
+      },
       "all":"All texts",
       "links":"Quick Links",
       "persons":"Persons",
