fixes for etext download UI (#989)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -902,7 +902,9 @@
       "increaseFont": "Increase Etext font size",
       "decreaseFont": "Decrease Etext font size",
       "downloadE": "Download Etext",
-      "saveF": "Save downloaded file"
+      "saveF": "Save downloaded file",
+      "noDL": "Download available from the viewer",
+      "noDLviewer": "Please select a volume or a text within a volume for download"
    },
    "access": {
       "fairuse1": "BDRC <bold>restricts access<\/bold> to this work (only the first and last 20 images are available online) because the work is under <bold>copyright<\/bold>.",
