fix duplicate getLabels sent + shorter title on curated data pages (#933)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -886,7 +886,7 @@
       "20th":"20th Century",
       "21st":"21st Century",
       "nothing":"Nothing added in the {{time}}.",
-      "t_selected":"Selected Works by School",
+      "t_selected":"Selected Works",
       "tmp:T13":"Notice of Contents",
       "tmp:T281":"Poetry",
       "tmp:T1134":"History"
